--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <html>
  <head>
   <title>Karina Varik</title>
-  </head>
-  <body>
+ </head>
+ <body>
  <header>
      <h1>Tudengikood : 223017IACB</h1>
  </header>
@@ -10,14 +10,14 @@
  <h1>Ülesanned</h1>
  <h2>1.Ülesanne : tabel</h2>
  <table>
-     <tr>
-         <td>A</td>
-         <td>B</td>
-     </tr>
-     <tr>
-         <td>C</td>
-         <td>D</td>
-     </tr>
+  <tr>
+   <th>Male</th>
+   <th>Female</th>
+  </tr>
+  <tr>
+   <td>Aang</td>
+   <td>Katara</td>
+  </tr>
  </table>
  <br>
  <h2>2.Ülesanne : 100 sümbolid</h2>
@@ -31,5 +31,5 @@
  <h2>4.Ülesanne : link</h2>
  <li><a href="https://taltech.ee">TalTech</a></li> 
  </main>
- </body>
- </html>
+</body>
+</html>
