--- a/index.html
+++ b/index.html
@@ -1,6 +1,18 @@
 <html>
  <head>
   <title>Karina Varik</title>
+  <style>
+   table {
+    width: 100%;
+    background: white;
+    color: white;
+    border-spacing: 1px;
+   }
+   td, th {
+    background: maroon;
+    padding: 5px;
+   }
+  </style>
  </head>
  <body>
  <header>
