--- a/index.html
+++ b/index.html
@@ -1,18 +1,6 @@
 <html>
  <head>
   <title>Karina Varik</title>
-  <style>
-   table {
-    width: 100%;
-    background: white;
-    color: white;
-    border-spacing: 1px;
-   }
-   td, th {
-    background: maroon;
-    padding: 5px;
-   }
-  </style>
  </head>
  <body>
  <header>
@@ -21,7 +9,7 @@
  <main>
  <h1>Ülesanned</h1>
  <h2>1.Ülesanne : tabel</h2>
- <table>
+ <table border="1">
   <tr>
    <th>Male</th>
    <th>Female</th>
